# bevy_ecoli

./: Cargo.toml  bevy_ecoli.js  index.html  readme.md
assets/: ecoli.glb  ecoli_low.glb
src/: asset_loader.rs  camera.rs  debug.rs  ecoli.rs  frame.rs  main.rs
