[package]
name = "bevy_ecoli"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_prng = { version = "0.7.0", features = ["wyrand"] }
bevy_rand = "0.7.0"
rand = "0.8.5"
rand_core = "0.6.4"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
